# tauri-plugin-app-events

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: CI.yml  audit.yml
android/: build.gradle.kts  consumer-rules.pro
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: AppEventsPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/src-tauri/: tauri.conf.json
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: AppEventsPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
src/: lib.rs  mobile.rs
