[package]
name = "tauri-plugin-app-events"
version = "0.2.0"
authors = [ "VinVel <dev+tauri-plugin-app-events@velcore.net>" ]
description = "A plugin for tauri@v2 to listen some events on iOS and Android."
license = "MIT"
repository = "https://github.com/VinVel/tauri-plugin-app-events.git"
edition = "2024"
rust-version = "1.93.1"
exclude = ["/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-app-events"

[dependencies]
tauri = "2.10.3"
serde = "1.0.228"
thiserror = "2.0.18"

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }
tauri-build = "2.5.6"
